Add vids, kube, liquibase, graphqlAdviceController

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: '3.8'
 
 services:
 
-#  backend-car:
-#    container_name: backend-note
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - db-car
-#    env_file:
-#      - .properties
+  backend-note:
+    container_name: backend-note
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8081"
+    depends_on:
+      - db-note
+    env_file:
+      - .properties
 
 
-  db-car:
+  db-note:
     image: bitnami/postgresql:14
     container_name: db-note
     env_file:
@@ -24,7 +24,6 @@ services:
       - "5440:5432"
     volumes:
       - db_data:/var/lib/postgresql/data/
-      - ./db-init/:/docker-entrypoint-initdb.d/
 
 volumes:
   db_data:
