--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.datasource.password=${POSTGRESQL_PASSWORD}
 
 # GraphQL
 spring.graphql.graphiql.enabled=true
+
+#liquibase
+spring.liquibase.enabled=true
+spring.liquibase.drop_first=false
+spring.liquibase.change_log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.default_schema=${POSTGRES_SCHEMA}
