--- a/.properties
+++ b/.properties
@@ -3,6 +3,6 @@ SERVER_PORT=8081
 POSTGRESQL_USERNAME: postgres
 POSTGRESQL_PASSWORD: postgres
 POSTGRESQL_DATABASE: postgres
-PORT_DB=5440
+PORT_DB=5432
 POSTGRES_SCHEMA=public
-DB_HOST=localhost
+DB_HOST=db-note
