--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.config.import=optional:file:.properties
+spring.config.import=optional:file:.env[.properties]
 
 server.port=${SERVER_PORT}
 
@@ -15,3 +15,19 @@ spring.liquibase.enabled=true
 spring.liquibase.drop_first=false
 spring.liquibase.change_log=classpath:db/changelog/db.changelog-master.yaml
 spring.liquibase.default_schema=${POSTGRES_SCHEMA}
+
+# minio
+minio.url=${MINIO_URL}
+minio.user=${MINIO_ROOT_USER}
+minio.password=${MINIO_ROOT_PASSWORD}
+minio.bucket=${MINIO_BUCKET}
+minio.console-port=${MINIO_CONSOLE_PORT}
+minio.port=${MINIO_PORT}
+
+# REDIS
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
+spring.cache.type=redis
+spring.cache.cache-names=redis-cache
+spring.cache.redis.time-to-live=${REDIS_CACHE_TIME}
