--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,7 +1,4 @@
 databaseChangeLog:
-  -   include:
-        file: migrations/1-create-note.sql
-        relativeToChangelogFile: true
-  - include:
-        file: migrations/2-add-trigger.sql
-        relativeToChangelogFile: true
+  - includeAll:
+      path: /migrations
+      relativeToChangelogFile: true
