--- a/.env
+++ b/.env
@@ -21,3 +21,10 @@ MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 MINIO_CONSOLE_PORT=9090
 MINIO_PORT=9000
+
+# MONGO
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=admin
+MONGO_DB=mongo
+MONGO_PORT=27017
+MONGO_HOST=mongodb-note
