--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.config.import=optional:file:.env[.properties]
 
 server.port=${SERVER_PORT}
 
+spring.servlet.multipart.max-file-size=256MB
+
 # db connection
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${PORT_DB}/${POSTGRESQL_DATABASE}
 spring.datasource.username=${POSTGRESQL_USERNAME}
@@ -31,3 +33,11 @@ spring.data.redis.password=${REDIS_PASSWORD}
 spring.cache.type=redis
 spring.cache.cache-names=redis-cache
 spring.cache.redis.time-to-live=${REDIS_CACHE_TIME}
+
+# MONGO
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=${MONGO_INITDB_ROOT_USERNAME}
+spring.data.mongodb.password=${MONGO_INITDB_ROOT_PASSWORD}
+spring.data.mongodb.database=${MONGO_DB}
+spring.data.mongodb.port=${MONGO_PORT}
+spring.data.mongodb.host=${MONGO_HOST}
