Add new migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,8 @@ spring.data.mongodb.password=${MONGO_INITDB_ROOT_PASSWORD}
 spring.data.mongodb.database=${MONGO_DB}
 spring.data.mongodb.port=${MONGO_PORT}
 spring.data.mongodb.host=${MONGO_HOST}
+
+# JWT
+jwt.access-expiration=${ACCESS_EXPIRATION}
+jwt.refresh-expiration=${REFRESH_EXPIRATION}
+jwt.secret=${JWT_SECRET}
